// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note component > renders with close button 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-success"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:items-center"
    >
      <button
        aria-label="Close"
        class="ds:cursor-pointer ds:ml-3 ds:mr-0 ds:flex ds:sm:mr-5 ds:sm:ml-5"
        type="button"
      >
        <svg
          fill="currentColor"
          height="32"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
            opacity=".87"
          />
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Note component > renders with default variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-success"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with error variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-alert"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with read more component 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-success"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
      <span
        class="ds:mt-4 ds:text-nowrap ds:rounded-[30px] ds:bg-white ds:px-6 ds:py-[10px] ds:text-button-md ds:hover:underline ds:focus-visible:outline ds:focus-visible:outline-[3px] ds:focus-visible:outline-offset-[1.5px] ds:focus-visible:outline-white ds:active:bg-accent ds:active:text-white ds:active:no-underline"
      >
        Read more
      </span>
    </div>
    <div
      class="ds:flex ds:items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with success variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-success"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:items-center"
    />
  </div>
</div>
`;

exports[`Note component > renders with warning variant 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="ds:text-primary-gray ds:bg-warning"
  role="alert"
>
  <div
    class="ds:mx-auto ds:flex ds:min-h-[42px] ds:items-center ds:px-5 ds:justify-start ds:sm:min-h-11 ds:sm:pl-7 ds:sm:pr-0 ds:sm:justify-center ds:sm:gap-x-[20%]"
  >
    <div
      class="ds:flex ds:flex-col ds:flex-wrap ds:items-start ds:py-4 ds:sm:flex-row ds:sm:items-center ds:sm:gap-x-5 ds:sm:gap-y-2 ds:sm:py-5"
    >
      <div
        class="ds:text-heading-4 ds:sm:text-heading-3"
      >
        Test Title
      </div>
      <div
        class="ds:mt-1 ds:sm:mt-0 ds:text-body-sm ds:font-arial"
      >
        Test Description
      </div>
    </div>
    <div
      class="ds:flex ds:items-center"
    />
  </div>
</div>
`;
